--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ GH_TOKEN=
 GATSBY_GOOGLE_CLIENT_ID=
 FIGMA_TOKEN=
 NPM_TOKEN=
-SLACK_TOKEN=
+SLACK_CHANGELOG_WEBHOOK_URL=
 SLACK_API_READ_PLZ_ORBIT=
 GATSBY_ORBIT_STORAGE_PATH=
 ORBIT_STORAGE_PATH=
