--- a/.github/workflows/cron-update-icons.yml
+++ b/.github/workflows/cron-update-icons.yml
@@ -3,6 +3,7 @@ name: Update icons
 on:
   schedule:
     - cron: "0 10 * * *"
+  workflow_dispatch:
 
 jobs:
   cron-update-icons:
@@ -34,7 +35,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            github.pulls.create({
+            github.rest.pulls.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
               head: 'feat/update-icons-and-svgs',
