--- a/.github/workflows/cron-update-tokens.yml
+++ b/.github/workflows/cron-update-tokens.yml
@@ -3,6 +3,7 @@ name: Update palette tokens
 on:
   schedule:
     - cron: "0 8 * * *"
+  workflow_dispatch:
 
 jobs:
   cron-update-tokens:
@@ -36,7 +37,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            github.pulls.create({
+            github.rest.pulls.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
               head: 'feat/update-palette-tokens',
