chore: fix commits on cronjobs
Commits were either not being done correctly or branches were not being pushed
Github-script action does not push branches so we have to do it above

--- a/.github/workflows/cron-update-contributors.yml
+++ b/.github/workflows/cron-update-contributors.yml
@@ -27,7 +27,14 @@ jobs:
         run: |
           yarn docs fetch:contributors
           git add --all
-          git diff-index --quiet HEAD || git commit -m "docs: update contributors"
+          if git diff-index --quiet HEAD; then
+            echo "No changes to contributors. Exiting."
+            exit 0
+          else
+            git checkout -b docs/update-contributors
+            git commit -m "docs: update contributors"
+            git push origin docs/update-contributors
+          fi
         env:
           FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
 
