--- a/.github/workflows/cron-update-contributors.yml
+++ b/.github/workflows/cron-update-contributors.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 11 * * *"
   workflow_dispatch:
 
+env:
+  new_files: false
+
 jobs:
   cron-update-contributors:
     runs-on: ubuntu-latest
@@ -29,17 +32,19 @@ jobs:
           git add --all
           if git diff-index --quiet HEAD; then
             echo "No changes to contributors. Exiting."
-            exit 0
+            echo "new_files=false" >> $GITHUB_ENV
           else
             git checkout -b docs/update-contributors
             git commit -m "docs: update contributors"
             git push origin docs/update-contributors
+            echo "new_files=true" >> $GITHUB_ENV
           fi
         env:
           FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
 
       - name: Create PR
         uses: actions/github-script@v6
+        if: env.new_files == 'true'
         with:
           script: |
             github.rest.pulls.create({
