--- a/.github/workflows/cron-update-statuses.yml
+++ b/.github/workflows/cron-update-statuses.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 9 * * *"
   workflow_dispatch:
 
+env:
+  new_files: false
+
 jobs:
   cron-update-statuses:
     runs-on: ubuntu-latest
@@ -29,15 +32,17 @@ jobs:
           git add --all
           if git diff-index --quiet HEAD; then
             echo "No changes to component statuses. Exiting."
-            exit 0
+            echo "new_files=false" >> $GITHUB_ENV
           else
             git checkout -b docs/update-component-statuses
             git commit -m "chore: update component statuses"
             git push origin docs/update-component-statuses
+            echo "new_files=true" >> $GITHUB_ENV
           fi
 
       - name: Create PR
         uses: actions/github-script@v6
+        if: env.new_files == 'true'
         with:
           script: |
             github.rest.pulls.create({
