--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -123,14 +123,15 @@ jobs:
         run: yarn check:links
 
   test-ct:
-    name: Test Components
+    name: Visual Regression Tests
     runs-on: ubuntu-latest
     container:
       image: mcr.microsoft.com/playwright:v1.39.0-jammy
     strategy:
       fail-fast: false
       matrix:
-        shard: [1/4, 2/4, 3/4, 4/4]
+        shardIndex: [1, 2, 3, 4]
+        shardTotal: [4]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -144,14 +145,42 @@ jobs:
           yarn tailwind-preset build
           yarn components build
       - name: Test Components
-        run: yarn components test-ct --shard ${{ matrix.shard }}
-      - name: Upload Results
-        uses: actions/upload-artifact@v4
+        run: yarn components test-ct --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }} --reporter=blob
+      - name: Upload blob report artifacts
         if: failure()
+        uses: actions/upload-artifact@v4
         with:
-          name: test-results
-          path: packages/orbit-components/test-results/
-          retention-days: 7
+          name: blob-report-${{ matrix.shardIndex }}
+          path: packages/orbit-components/blob-report
+          retention-days: 1
+
+  test-ct-report:
+    name: Visual Regression Tests Report
+    runs-on: ubuntu-latest
+    # We want to execute it if test-ct fails, but only after it finishes
+    if: ${{ always() && needs.test-ct.result == 'failure' }}
+    needs: test-ct
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install
+        uses: ./.github/actions/node
+      - name: Download blob reports artifacts
+        id: download
+        uses: actions/download-artifact@v4
+        with:
+          path: all-blob-reports
+          pattern: blob-report-*
+          merge-multiple: true
+      - name: Merge into HTML Report
+        run: npx playwright merge-reports --reporter html ./all-blob-reports
+      - name: Deploy Tests Report
+        env:
+          BRANCH_NAME: ${{ github.head_ref }}
+        run: |
+          BRANCH_URL=$(echo ${BRANCH_NAME} | sed -e 's/[^a-zA-Z0-9]/-/g')
+          DOMAIN=https://kiwicom-orbit-test-report-${BRANCH_URL}.surge.sh
+          yarn deploy:report ${DOMAIN} --token ${{ secrets.SURGE_TOKEN }}
 
   cypress:
     runs-on: ubuntu-latest
