--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tokens": "yarn workspace @kiwicom/orbit-design-tokens",
     "tracking": "yarn workspace @kiwicom/orbit-tracking",
     "update-supported-browsers": "markdown --path .github/contribution/testing-conventions.md && git add .github/contribution/testing-conventions.md",
-    "docker:reset": "rm -rf packages/orbit-components/playwright/.cache && yarn install --frozen-lockfile --ignore-scripts"
+    "docker:reset": "rm -rf packages/orbit-components/playwright/.cache && yarn install --frozen-lockfile --ignore-scripts",
+    "deploy:report": "yarn surge playwright-report/"
   },
   "engines": {
     "yarn": ">=1.19.1"
