feat(Slider): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -79,7 +79,7 @@ Skeleton: true
 SkipLink: false
 SkipNavigation: false
 Slide: false
-Slider: false
+Slider: true
 SocialButton: true
 Stack: true
 Stepper: true
