feat(LayoutColumn): migrate to tailwind
BREAKING CHANGE: removed hideOn prop from LayoutColumn

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -49,7 +49,7 @@ ItinerarySegmentBanner: false
 ItinerarySegmentDetail: false
 ItinerarySegmentStop: false
 Layout: true
-LayoutColumn: false
+LayoutColumn: true
 LinkList: true
 OrbitList: true
 List: true
