feat(Slide): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -78,7 +78,7 @@ ServiceLogo: false
 Skeleton: true
 SkipLink: false
 SkipNavigation: false
-Slide: false
+Slide: true
 Slider: true
 SocialButton: true
 Stack: true
