feat(Coupon): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -22,7 +22,7 @@ CarrierLogo: true
 Checkbox: true
 ChoiceGroup: true
 Collapse: true
-Coupon: false
+Coupon: true
 CountryFlag: true
 Desktop: true
 Dialog: true
