feat(Timeline): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -106,8 +106,8 @@ TextOrbit: true
 Text: true
 TextLink: true
 Textarea: true
-Timeline: false
-TimelineStep: false
+Timeline: true
+TimelineStep: true
 Toast: true
 ToastRoot: true
 Tooltip: true
