--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -74,7 +74,7 @@ SeatLegend: true
 SegmentedSwitch: true
 Select: true
 Separator: true
-ServiceLogo: false
+ServiceLogo: true
 Skeleton: true
 SkipLink: false
 SkipNavigation: false
