feat(StopoverArrow): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -84,7 +84,7 @@ SocialButton: true
 Stack: true
 Stepper: true
 StepperStateless: true
-StopoverArrow: false
+StopoverArrow: true
 Switch: true
 Tab: true
 TabPanel: true
