feat(SkipLink): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -76,7 +76,7 @@ Select: true
 Separator: true
 ServiceLogo: true
 Skeleton: true
-SkipLink: false
+SkipLink: true
 SkipNavigation: false
 Slide: true
 Slider: true
