feat(Inline): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -41,7 +41,7 @@ InputField: true
 InputFile: true
 InputGroup: true
 InputSelect: true
-Inline: false
+Inline: true
 Itinerary: true
 ItineraryBadgeList: true
 ItinerarySegment: true
