feat(Pagination): migrate to tailwind

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -64,7 +64,7 @@ ModalSection: true
 NavigationBar: true
 NotificationBadge: true
 OrbitProvider: true
-Pagination: false
+Pagination: true
 Popover: true
 Portal: true
 Radio: true
