feat(Itinerary): migrate to Tailwind
some visual tests were updated because some bugs were actually fixed during this migration

--- a/docs/src/data/tailwind-migration-status.yaml
+++ b/docs/src/data/tailwind-migration-status.yaml
@@ -42,12 +42,12 @@ InputFile: true
 InputGroup: true
 InputSelect: true
 Inline: false
-Itinerary: false
-ItineraryBadgeList: false
-ItinerarySegment: false
-ItinerarySegmentBanner: false
-ItinerarySegmentDetail: false
-ItinerarySegmentStop: false
+Itinerary: true
+ItineraryBadgeList: true
+ItinerarySegment: true
+ItinerarySegmentBanner: true
+ItinerarySegmentDetail: true
+ItinerarySegmentStop: true
 Layout: true
 LayoutColumn: true
 LinkList: true
