ci: allow Dependabot user to write in PRs
According to the GitHub docs, the Dependabot gets read-only permissions
on the GITHUB_TOKEN. Since we want to create a comment with the staging
Storybook link, we need to grant write permission in the CI job.

https://docs.github.com/en/code-security/dependabot/working-with-dependabot/automating-dependabot-with-github-actions#changing-github_token-permissions

--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -16,6 +16,8 @@ env: # Set environment variables for every job and step in this workflow
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write # for dependabot
     steps:
       - name: Checkout
         uses: actions/checkout@v4
