--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -70,8 +70,7 @@
   "peerDependencies": {
     "@babel/runtime": "^7.21.0",
     "react": ">=17.0.0",
-    "react-dom": ">=17.0.0",
-    "styled-components": "^5"
+    "react-dom": ">=17.0.0"
   },
   "dependencies": {
     "@kiwicom/orbit-design-tokens": "^7.2.0",
@@ -107,17 +106,14 @@
     "@types/capitalize": "^2.0.0",
     "@types/pixelmatch": "^5.2.4",
     "@types/readable-stream": "^2.3.13",
-    "@types/styled-components": "^5.1.15",
     "@types/svgicons2svgfont": "^10.0.1",
     "@types/webpack": "^5.28.0",
     "@vitejs/plugin-react": "^4.0.0",
     "babel-loader": "^9.1.2",
     "babel-plugin-require-context-hook": "^1.0.0",
-    "babel-plugin-styled-components": "^2.0.7",
     "cypress": "^13.2.0",
     "eslint-plugin-storybook": "^0.6.12",
     "fs-extra": "^9.0.1",
-    "jest-styled-components": "^7.1.1",
     "jscodeshift": "^0.13.1",
     "jsdom": "^20.0.3",
     "monstra": "^0.9.2",
@@ -132,7 +128,6 @@
     "start-server-and-test": "^1.13.1",
     "storybook": "^7.0.23",
     "storybook-addon-pseudo-states": "^2.1.2",
-    "styled-components": "^5.3.1",
     "surge": "^0.23.0",
     "svg2ttf": "^6.0.0",
     "svgicons2svgfont": "^10.0.0",
