--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -90,6 +90,7 @@
     "@nanostores/router": "^0.3.1",
     "@playwright/experimental-ct-react": "^1.39.0",
     "@size-limit/webpack-why": "^8.0.0",
+    "@storybook/addon-a11y": "^7.4.6",
     "@storybook/addon-essentials": "^7.0.23",
     "@storybook/addon-knobs": "^7.0.2",
     "@storybook/addon-styling": "^1.3.1",
