chore: ignore config scripts in lerna publish
Lerna now ignores changes in config scripts that have no changes on the client side of packages

--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,11 @@
     },
     "publish": {
       "allowBranch": "master",
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "ignoreChanges": [
+        "packages/orbit-design-tokens/scripts/**",
+        "packages/orbit-components/config/**"
+      ]
     }
   }
 }
