--- a/docs/package.json
+++ b/docs/package.json
@@ -30,6 +30,7 @@
     "@icons-pack/react-simple-icons": "^8.0.1",
     "@jsdevtools/rehype-url-inspector": "^2.0.2",
     "@kiwicom/babel-plugin-orbit-components": "*",
+    "@kiwicom/eslint-plugin-orbit-components": "*",
     "@kiwicom/orbit-components": "*",
     "@kiwicom/orbit-design-tokens": "*",
     "@kiwicom/orbit-tailwind-preset": "*",
@@ -61,7 +62,6 @@
     "copy-to-clipboard": "^3.3.1",
     "downshift": "^6.1.7",
     "eslint-plugin-mdx": "^1.17.0",
-    "eslint-plugin-orbit-components": "*",
     "fontfaceobserver": "^2.1.0",
     "fs-extra": "^9.1.0",
     "fuzzaldrin-plus": "^0.6.0",
