chore: run workflow once the PR is created by job

--- a/.github/workflows/cron-update-icons.yml
+++ b/.github/workflows/cron-update-icons.yml
@@ -46,6 +46,7 @@ jobs:
         uses: actions/github-script@v6
         if: env.new_files == 'true'
         with:
+          github-token: ${{ secrets.PAT }}
           script: |
             github.rest.pulls.create({
               owner: context.repo.owner,
