--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -90,16 +90,16 @@
     "@nanostores/router": "^0.3.1",
     "@playwright/experimental-ct-react": "^1.44.1",
     "@size-limit/webpack-why": "^8.0.0",
-    "@storybook/addon-a11y": "^7.4.6",
-    "@storybook/addon-essentials": "^7.0.23",
-    "@storybook/addon-knobs": "^7.0.2",
-    "@storybook/addon-styling": "^1.3.1",
-    "@storybook/addons": "^7.0.23",
-    "@storybook/blocks": "^7.0.23",
-    "@storybook/react": "^7.0.23",
-    "@storybook/react-webpack5": "^7.0.23",
+    "@storybook/addon-a11y": "^8.2.4",
+    "@storybook/addon-essentials": "^8.2.4",
+    "@storybook/addon-knobs": "8.0.1",
+    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/blocks": "^8.2.4",
+    "@storybook/manager-api": "^8.2.4",
+    "@storybook/react": "^8.2.4",
+    "@storybook/react-webpack5": "^8.2.4",
     "@storybook/storybook-deployer": "^2.8.16",
-    "@storybook/theming": "^7.0.23",
+    "@storybook/theming": "^8.2.1",
     "@svgr/core": "^6.3.1",
     "@svgr/plugin-jsx": "^6.3.1",
     "@svgr/plugin-prettier": "^6.3.1",
@@ -113,7 +113,7 @@
     "babel-loader": "^9.1.2",
     "babel-plugin-require-context-hook": "^1.0.0",
     "cypress": "^13.2.0",
-    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-plugin-storybook": "^0.8.0",
     "fs-extra": "^9.0.1",
     "jscodeshift": "^0.13.1",
     "jsdom": "^20.0.3",
@@ -123,12 +123,13 @@
     "ora": "^6.1.0",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
+    "prism-react-renderer": "^2.3.1",
     "react-element-to-jsx-string": "^14.3.2",
     "react-window": "^1.8.10",
     "sharp": "^0.32.6",
     "start-server-and-test": "^1.13.1",
-    "storybook": "^7.0.23",
-    "storybook-addon-pseudo-states": "^2.1.2",
+    "storybook": "^8.2.4",
+    "storybook-addon-pseudo-states": "^3.1.1",
     "surge": "^0.23.0",
     "svg2ttf": "^6.0.0",
     "svgicons2svgfont": "^12.0.0",
