--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -91,8 +91,8 @@
     "@playwright/experimental-ct-react": "^1.44.1",
     "@size-limit/webpack-why": "^8.0.0",
     "@storybook/addon-a11y": "^8.2.4",
+    "@storybook/addon-controls": "^8.2.4",
     "@storybook/addon-essentials": "^8.2.4",
-    "@storybook/addon-knobs": "8.0.1",
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/blocks": "^8.2.4",
     "@storybook/manager-api": "^8.2.4",
