--- a/docs/src/documentation/03-components/07-interaction/segmentedswitch/meta.yml
+++ b/docs/src/documentation/03-components/07-interaction/segmentedswitch/meta.yml
@@ -1,3 +1,3 @@
 title: SegmentedSwitch
-description: Showing two choices from which only one can be selected.
+description: Showing multiple choices from which only one can be selected.
 type: tabs
