--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -93,7 +93,7 @@
     "@storybook/addon-a11y": "^8.2.4",
     "@storybook/addon-controls": "^8.2.4",
     "@storybook/addon-essentials": "^8.2.4",
-    "@storybook/addon-styling": "^1.3.7",
+    "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/blocks": "^8.2.4",
     "@storybook/manager-api": "^8.2.4",
     "@storybook/react": "^8.2.4",
@@ -113,6 +113,7 @@
     "babel-loader": "^9.1.2",
     "babel-plugin-require-context-hook": "^1.0.0",
     "cypress": "^13.2.0",
+    "css-loader": "^7.1.2",
     "eslint-plugin-storybook": "^0.8.0",
     "fs-extra": "^9.0.1",
     "jscodeshift": "^0.13.1",
@@ -123,6 +124,7 @@
     "ora": "^6.1.0",
     "pixelmatch": "^5.3.0",
     "pngjs": "^7.0.0",
+    "postcss-loader": "8.1.1",
     "prism-react-renderer": "^2.3.1",
     "react-element-to-jsx-string": "^14.3.2",
     "react-window": "^1.8.10",
@@ -130,6 +132,7 @@
     "start-server-and-test": "^1.13.1",
     "storybook": "^8.2.4",
     "storybook-addon-pseudo-states": "^3.1.1",
+    "style-loader": "^4.0.0",
     "surge": "^0.23.0",
     "svg2ttf": "^6.0.0",
     "svgicons2svgfont": "^12.0.0",
