chore: optimize email icons generator
Sometimes we need to generate PNG from icons and add them to images.kiwi.
The script to generate them was optimized and now generates the whole directory
to be copied and pasted there.

--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -23,8 +23,10 @@
     "fetch:icons": "node --loader ts-node/esm config/fetchIcons.mts",
     "check:icons": "node --loader ts-node/esm config/checkIconsCli.mts",
     "check:types": "tsc --p tsconfig.json",
-    "build:iconsPng": "node --loader ts-node/esm config/generatePngIcons.mts",
-    "build:storybook": "node --loader ts-node/esm  config/build/buildIcons.mts && storybook build -c .storybook -o .out",
+    "build:icons": "node --loader ts-node/esm config/build/buildIcons.mts",
+    "build:iconsFont": "node --loader ts-node/esm config/createSVGFont.mts",
+    "build:emailIcons": "yarn build:icons && yarn build:iconsFont && node --loader ts-node/esm config/generateEmailIcons.mts",
+    "build:storybook": "yarn build:icons && storybook build -c .storybook -o .out",
     "eslint:check": "eslint . --report-unused-disable-directives",
     "test-ct": "playwright test -c playwright-ct.config.ts",
     "deploy:storybook": "yarn storybook-to-ghpages -e ./.out",
