--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/types": "^7.21.4",
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^17.0.3",
+    "@floating-ui/react": "^0.26.24",
     "@kiwicom/browserslist-config": "^4.0.3",
     "@octokit/rest": "^19.0.5",
     "@size-limit/file": "^8.0.0",
