--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -75,13 +75,12 @@
     "react-dom": ">=17.0.0"
   },
   "dependencies": {
+    "@floating-ui/react": "0.26.24",
     "@kiwicom/orbit-design-tokens": "^8.1.0",
     "@kiwicom/orbit-tailwind-preset": "^5.1.0",
-    "@popperjs/core": "^2.9.2",
     "clsx": "^2.0.0",
     "color2k": "^2.0.3",
-    "react-hot-toast": "^2.4.0",
-    "react-popper": "^2.3.0"
+    "react-hot-toast": "^2.4.0"
   },
   "devDependencies": {
     "@babel/helper-get-function-arity": "^7.16.7",
