--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "storybook": "storybook dev -p 6007 -c .storybook --ci",
+    "test-storybook": "test-storybook --url http://127.0.0.1:6007",
     "cy:dev": "vite cypress/integration --logLevel silent",
     "cy:run": "start-server-and-test cy:dev http-get://localhost:3000 'cypress run'",
     "cy:open": "start-server-and-test cy:dev http-get://localhost:3000 'cypress open'",
@@ -89,7 +90,7 @@
     "@emotion/core": "^11.0.0",
     "@nanostores/react": "^0.2.0",
     "@nanostores/router": "^0.3.1",
-    "@playwright/experimental-ct-react": "^1.44.1",
+    "@playwright/experimental-ct-react": "^1.48.1",
     "@size-limit/webpack-why": "^11.1.4",
     "@storybook/addon-a11y": "^8.2.4",
     "@storybook/addon-controls": "^8.2.4",
@@ -102,6 +103,7 @@
     "@storybook/react-webpack5": "^8.2.4",
     "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/theming": "^8.2.1",
+    "@storybook/test-runner": "^0.19.1",
     "@svgr/core": "^6.3.1",
     "@svgr/plugin-jsx": "^6.3.1",
     "@svgr/plugin-prettier": "^6.3.1",
@@ -142,6 +144,8 @@
     "ttf2woff2": "^4.0.1",
     "vite": "^4.5.5",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "axe-playwright": "^2.0.3",
+    "@playwright/test": "^1.44.1"
   }
 }
