--- a/packages/eslint-plugin-orbit-components/package.json
+++ b/packages/eslint-plugin-orbit-components/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@kiwicom/eslint-plugin-orbit-components",
+  "private": true,
   "description": "Collection of ESLint rules to enforce the best usage practices of @kiwicom/orbit-components",
   "version": "0.9.0",
   "author": "Kiwi.com",
