chore: remove eslint-plugin-orbit-components references

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,7 @@
   "include": [
     "packages/orbit-components/**/*",
     "packages/orbit-design-tokens/**/*",
-    "packages/orbit-themer/**/*",
-    "packages/eslint-plugin-orbit-components/**/*"
+    "packages/orbit-themer/**/*"
   ],
   "exclude": [
     "**/scripts/**/*",
