feat(Box): remove deprecated borderRadius values
BREAKING CHANGE: deprecated borderRadius prop values were removed.

--- a/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
@@ -91,18 +91,7 @@ export interface Props extends Common.Globals {
   readonly elevation?: Elevation;
   readonly color?: ColorTokens;
   readonly background?: ColorTokens;
-  readonly borderRadius?:
-    | "small"
-    | "normal"
-    | "large"
-    | "circle"
-    | "full"
-    | "50"
-    | "100"
-    | "150"
-    | "200"
-    | "300"
-    | "400";
+  readonly borderRadius?: "full" | "50" | "100" | "150" | "200" | "300" | "400";
   readonly overflow?: "auto" | "hidden" | "scroll" | "visible";
   readonly mediumMobile?: MediaQueryObject;
   readonly largeMobile?: MediaQueryObject;
