chore: update node types dep

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/dotenv-safe": "^8.1.6",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.17.7",
+    "@types/node": "^22.10.10",
     "@types/pngjs": "^6.0.2",
     "@types/prettier": "^2.7.2",
     "@types/react": ">=17.0.26",
