chore: make code-review workflow triggerable

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -1,10 +1,15 @@
 name: Analyze PR Diff with LLM
 
 on:
+  workflow_dispatch:
+    inputs:
+      pr_number:
+        description: "Pull request number to analyze"
+        required: true
+        type: number
   pull_request:
-    types: [opened, synchronize, reopened]
     branches:
-      - rcsl/code-review
+      - "**"
 
 # Add permissions needed to comment on PRs
 permissions:
@@ -219,8 +224,11 @@ jobs:
             const fs = require('fs');
             const analysis = fs.readFileSync('llm_analysis.md', 'utf8');
 
+            // Use the PR number from the event or from the input parameter
+            const prNumber = ${{ github.event.pull_request.number || github.event.inputs.pr_number }};
+
             github.rest.issues.createComment({
-              issue_number: context.issue.number,
+              issue_number: prNumber,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `## LLM Analysis of PR Changes\n\n${analysis}`
