--- a/packages/orbit-components/src/Illustration/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Illustration/TYPESCRIPT_TEMPLATE.template
@@ -10,9 +10,11 @@ export type Name =%NAMES%
 // TODO: remove spaceAfter in the next major version
 /** SpaceAfter is deprecated, use margin instead */
 
+// Interface content is fetched from /src/Illustration/TYPESCRIPT_TEMPLATE.template
 export interface Props extends Common.Globals, Common.SpaceAfter {
   readonly size?: "extraSmall" | "small" | "medium" | "large" | "display";
   readonly name: Name;
   readonly margin?: React.CSSProperties["margin"] | Common.ObjectProperty;
   readonly alt?: string;
+  readonly role?: "img" | "presentation";
 }
