feat(AirportIllustration): add role prop to improve accessibility

--- a/packages/orbit-components/src/AirportIllustration/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/AirportIllustration/TYPESCRIPT_TEMPLATE.template
@@ -5,8 +5,10 @@ import type * as Common from "../common/types";
 
 type Name =%NAMES%
 
+// Interface content is fetched from /src/Illustration/TYPESCRIPT_TEMPLATE.template
 export interface Props extends Common.Globals, Common.SpaceAfter {
   readonly size?: "extraSmall" | "small" | "medium" | "large" | "display";
   readonly name: Name;
   readonly alt?: string;
+  readonly role?: "img" | "presentation";
 }
