feat(Box): add ariaLabel prop to improve accessibility

--- a/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
@@ -91,4 +91,5 @@ export interface Props extends Common.Globals {
   readonly largeDesktop?: MediaQueryObject;
   readonly children?: React.ReactNode;
   readonly className?: string; // Box is a only component where extending make sense
+  readonly ariaLabel?: string;
 }
