--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   "license": "MIT",
   "resolutions": {
     "@types/eslint": "^8.37.0",
-    "@types/react": ">=17.0.26",
-    "@types/react-dom": ">=17.0.9",
+    "@types/react": ">=18.3.1",
+    "@types/react-dom": ">=18.3.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
@@ -65,8 +65,7 @@
     "@stylelint/postcss-css-in-js": "^0.38.0",
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/dedent": "^0.7.0",
     "@types/dotenv-safe": "^8.1.6",
@@ -74,8 +73,8 @@
     "@types/lodash": "^4.17.7",
     "@types/pngjs": "^6.0.2",
     "@types/prettier": "^2.7.2",
-    "@types/react": ">=17.0.26",
-    "@types/react-dom": ">=17.0.9",
+    "@types/react": ">=19.0.0",
+    "@types/react-dom": ">=19.0.0",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.18.0",
     "babel-jest": "^28.1.3",
@@ -116,8 +115,8 @@
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "raf": "^3.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1",
     "remark-cli": "^12.0.1",
     "remark-frontmatter": "^2.0.0",
     "remark-lint": "^8.0.0",
