docs: update to React 18

--- a/docs/package.json
+++ b/docs/package.json
@@ -52,6 +52,8 @@
     "@types/resize-observer-browser": "^0.1.7",
     "@types/styled-components": "^5.1.15",
     "@types/uuid": "^8.3.1",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "axios": "^1.8.2",
     "babel-plugin-inline-react-svg": "^1.1.2",
     "babel-plugin-styled-components": "^2.0.7",
@@ -92,6 +94,8 @@
     "jsondiffpatch": "^0.4.1",
     "memfs": "^3.2.0",
     "prism-react-renderer": "^2.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
     "react-live": "^4.1.8",
