--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -134,7 +134,7 @@ jobs:
           genai.configure(api_key=GEMINI_API_KEY)
 
           # Function to call Gemini directly
-          def query_gemini(prompt, model="gemini-2.0-flash-thinking-exp-01-21"):
+          def query_gemini(prompt, model="gemini-2.0-flash-001"):
               """Send a prompt to Gemini and get a response"""
               try:
                   model = genai.GenerativeModel(model)
