feat: remove forwardRef usage due to React 18.3 upgrade
Orbit components were simplified by converting from forwardRef
to direct ref dur to React upgrade. The usage of ref prop was kept.

--- a/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
+++ b/packages/orbit-components/src/Box/TYPESCRIPT_TEMPLATE.template
@@ -93,4 +93,5 @@ export interface Props extends Common.Globals {
   readonly children?: React.ReactNode;
   readonly className?: string; // Box is a only component where extending make sense
   readonly ariaLabel?: string;
+  readonly ref?: React.Ref<HTMLDivElement>;
 }
