--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -124,12 +124,12 @@ jobs:
 
   test-ct:
     name: Visual Regression Tests
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.44.1-jammy
+    runs-on: ${{ matrix.os }}
+    container: ${{ matrix.os == 'ubuntu-latest' && fromJSON('{"image":"mcr.microsoft.com/playwright:v1.44.1-jammy"}') || null }}
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-latest, macos-latest]
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     steps:
@@ -137,10 +137,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Install
         uses: ./.github/actions/node
-      - name: Build
+      - name: Install Playwright (macOS)
+        if: matrix.os == 'macos-latest'
+        run: npx playwright install --with-deps
+      - name: Build (Ubuntu)
+        if: matrix.os == 'ubuntu-latest'
         run: |
           apt-get update
           apt-get install zip --yes
+          yarn tokens build
+          yarn tailwind-preset build
+          yarn components build
+      - name: Build (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
           yarn tokens build
           yarn tailwind-preset build
           yarn components build
@@ -150,7 +160,7 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: blob-report-${{ matrix.shardIndex }}
+          name: blob-report-${{ matrix.os }}-${{ matrix.shardIndex }}
           path: packages/orbit-components/blob-report
           retention-days: 1
 
