--- a/packages/orbit-components/package.json
+++ b/packages/orbit-components/package.json
@@ -73,8 +73,8 @@
   },
   "peerDependencies": {
     "@babel/runtime": "^7.21.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react": ">=18.3.0",
+    "react-dom": ">=18.3.0"
   },
   "dependencies": {
     "@floating-ui/react": "0.26.24",
